fix: change absolute position for contact us form and address at screen sizes less than 750px to remove overlap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -300,7 +300,6 @@ footer i {
 }
 
 #author {
-    height: 150px;
     width: 100%;
 }
 
@@ -544,7 +543,7 @@ footer i {
         margin: 0;
         position: absolute;
         left: 10%;
-        top: 15%;
+        top: 3%;
     }
 
     #address {
@@ -553,12 +552,11 @@ footer i {
         margin: 0;
         position: absolute;
         left: 10%;
-        bottom: 15%;
+        bottom: 3%;
     }
 
     #author {
-        height: 300px;
-        width: 100%;
+        margin-top: 10px;
     }
 
     #author>div {
